fix: String으로 읽어서 응답하니 favicon을 못 읽어서 byte로 읽도록 수정